# CIT_244-Python_II

./: .gitattributes  .gitignore  README.md  program1.py
cgray0209-CIT_244-55Z1-program_2/: README.rst  program_2.py  pyproject.toml
cgray0209-CIT_244-program_3/: .python-version  README.rst  pyproject.toml  tickets.csv
cgray0209-CIT_244-program_3/cgray0209_cit_244_program_3/: __init__.py
cgray0209-CIT_244-program_4/: .python-version  README.rst  pyproject.toml
cgray0209-CIT_244-program_4/my_stocks/: __init__.py  __main__.py
cgray0209-CIT_244-program_5/: .python-version  README.rst  cgray0209_cit_244_program_5.py  pyproject.toml
cgray0209-CIT_244-program_5/views/: _layout.tpl  add_trip_form.tpl  list_trips.tpl  list_trips_by_user_form.tpl  login_form.tpl  status.tpl  user_menu.tpl
cgray0209-CIT_244-program_6/: .python-version  README.rst  cgray0209_cit_244_program_6.py  pyproject.toml
cgray0209-CIT_244-program_6/views/: _layout.tpl  edit-employee-data-form.tpl  list-employee-payroll.tpl  view-by-department-form.tpl  welcome.tpl
cgray0209-program_1/: LICENSE.txt  README.rst
