[tool.poetry]
  authors = [ "Chet Gray <cgray0209@kctcs.edu>" ]
  description = "CIT 244: Python II - Program 5: hitting the bottle.py with sqlite"
  license = "UNLICENSED"
  name = "cgray0209-cit-244-program-5"
  packages = [ { include = "cgray0209_cit_244_program_5" } ]
  readme = "README.md"
  version = "0.1.0"

  [tool.poetry.dependencies]
    bottle = { git = "https://github.com/bottlepy/bottle.git" }
    python = "~3.9.16"

  [tool.poetry.group.dev.dependencies]
    black = "^23.3.0"
    flake8 = "^6.0.0"
    mypy = "^1.2.0"
    pylint = "^2.17.2"

[build-system]
  build-backend = "poetry.core.masonry.api"
  requires = [ "poetry-core" ]
